Change NoteFragment, getting note from bundle
Change package of NoteFragment,
add NoteFragmentViewModel,
add ViewBinding,
add getting serilizable object of AppNote from arguments

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -39,7 +39,7 @@
     </fragment>
     <fragment
         android:id="@+id/noteFragment"
-        android:name="com.rudimentum.notetaking.screens.NoteFragment"
+        android:name="com.rudimentum.notetaking.screens.note.NoteFragment"
         android:label="fragment_note"
         tools:layout="@layout/fragment_note" >
         <action
