Add action_menu for saving new note
Delete Button View, create add_new_note_menu

--- a/app/src/main/res/menu/add_new_note_action_menu.xml
+++ b/app/src/main/res/menu/add_new_note_action_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/btnDelete"
-        android:icon="@drawable/ic_delete"
+        android:id="@+id/btnSave"
+        android:icon="@drawable/ic_save"
         app:showAsAction='ifRoom'
-        android:title="@string/delete" />
+        android:title="@string/save" />
 </menu>
