--- a/app/src/main/res/layout/fragment_add_new_note.xml
+++ b/app/src/main/res/layout/fragment_add_new_note.xml
@@ -11,25 +11,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:background="@null"
+        android:hint="@string/hint_title_note"
         tools:ignore="LabelFor"
         style="@style/editText" />
 
     <EditText
+        android:layout_height="wrap_content"
         android:id="@+id/inputTextNote"
         app:layout_constraintTop_toBottomOf="@id/inputNameNote"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textMultiLine"
+        android:background="@null"
+        android:hint="@string/hint_text_note"
         tools:ignore="LabelFor"
         style="@style/editText" />
-
-    <Button
-        android:id="@+id/btnAddNote"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_add_note"
-        android:layout_margin="@dimen/app_margin"
-        app:layout_constraintTop_toBottomOf="@id/inputTextNote"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
