--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -19,7 +19,8 @@
             android:textStyle="bold"
             android:textSize="@dimen/app_large_text"
             android:gravity="center"
-            android:lines="1"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_margin="@dimen/app_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -34,6 +35,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/design_default_color_primary"
             android:textSize="@dimen/app_standard_text"
+            android:maxLines="3"
+            android:ellipsize="end"
             android:layout_margin="@dimen/app_margin"
             app:layout_constraintTop_toBottomOf="@id/itemNoteName"
             app:layout_constraintStart_toStartOf="parent"
