--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -8,12 +8,10 @@
 
     <TextView
         android:id="@+id/noteName"
-        tools:text="Name note"
-        android:textColor="@color/design_default_color_primary_dark"
+        tools:text="@string/name_note"
         android:textStyle="bold"
         android:textSize="@dimen/app_large_text"
         android:gravity="center"
-        android:lines="1"
         android:layout_margin="@dimen/app_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,10 +21,10 @@
 
     <TextView
         android:id="@+id/noteText"
-        tools:text="Note text"
+        tools:text="@string/note_text"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/design_default_color_primary"
         android:textSize="@dimen/app_standard_text"
         android:layout_margin="@dimen/app_margin"
         app:layout_constraintTop_toBottomOf="@id/noteName"
