--- a/app/src/main/res/menu/note_action_menu.xml
+++ b/app/src/main/res/menu/note_action_menu.xml
@@ -2,8 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/btnEdit"
+        android:icon="@drawable/ic_edit"
+        app:showAsAction='ifRoom'
+        android:title="@string/edit" />
+    <item
         android:id="@+id/btnDelete"
         android:icon="@drawable/ic_delete"
         app:showAsAction='ifRoom'
         android:title="@string/delete" />
+
 </menu>
