--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -11,7 +11,7 @@
         tools:text="@string/name_note"
         android:textStyle="bold"
         android:textSize="@dimen/app_large_text"
-        android:gravity="center"
+        android:minHeight="48dp"
         android:layout_margin="@dimen/app_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/app_standard_text"
+        android:minHeight="48dp"
         android:layout_margin="@dimen/app_margin"
         app:layout_constraintTop_toBottomOf="@id/noteName"
         app:layout_constraintStart_toStartOf="parent"
