--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="gold_2">#E6BE8A</color>
     <color name="silver">#C9C0BB</color>
     <color name="eerie_black">#1B1B1B</color>
-    <color name="text_hint">#757575</color>
+    <color name="text_color">#757575</color>
+    <color name="text_hint_color">#B5B5B5</color>
 </resources>
