--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:inputType">text</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:background">@null</item>
+        <item name="android:textColor">@color/text_color</item>
         <item name="android:layout_margin">@dimen/app_margin</item>
     </style>
 </resources>
